# madrona_basketball

./: .gitignore  CMakeLists.txt  README.md  debug_data_test.py  pipeline.py  pyproject.toml  test_coordinates.py  viewer.py
scripts/: README.md  action.py  agent.py  buffers.py  controllers.py  env.py  helpers.py  infer.py  moving_avg.py  ppo.py  ppo_stats.py  run.py  self_play.py  viewer.py  wandb_logger.py
src/: CMakeLists.txt  bindings.cpp  constants.hpp  constants.py  game.cpp  game.hpp  gen.cpp  gen.hpp  grid.hpp  helper.cpp  helper.hpp  init.hpp  mgr.cpp  mgr.hpp  sim.cpp  sim.hpp  types.hpp
src/madrona_simple_example/: gridworld.py
